# IRC_Crawler

./: .gitignore  CMakeLists.txt  README.md  buildb.bash
scripts/sql/: chan_nick_intersection.sql  channel.sql  channel_mode.sql  country.sql  irc_network.sql  nick.sql  nick_mode.sql  populate.sql  procedures.sql  queries.sql  tables.sql  triggers.sql  user.sql  user_nick_intersection.sql  views.sql
src/: CrawlerPrototype.py  Driver.cpp  IRC.hpp  IrcBot.cpp  IrcBot.hpp  IrcChannel.cpp  IrcChannel.hpp  IrcUser.hpp  Message.cpp  Message.hpp  TcpConnection.cpp  TcpConnection.hpp  conn_test.cpp
